Updated nav component based on cms content

--- a/src/components/linkbutton/styles.module.css
+++ b/src/components/linkbutton/styles.module.css
@@ -1,3 +1,19 @@
 .linkbutton {
-    font-weight: 600;
+  font-weight: 600;
+}
+
+.linkbutton:hover {
+  color: var(--brand-white);
+}
+
+.buttonBrandGreen {
+  color: var(--brand-green);
+}
+
+.buttonBrandBlue {
+  color: var(--brand-blue);
+}
+
+.buttonBrandHuntressBlue {
+  color: var(--brand-cyan);
 }
