--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,12 @@
   :root {
     --background: 34 35 36;
     --foreground: 245 248 250;
-    --brand-green: hsl(var(--nextui-primary));
-    --brand-blue: hsl(var(--nextui-secondary));
-    --brand-cyan: hsl(var(--nextui-huntressblue));
-    --brand-black: hsl(var(--nextui-background));
-    --brand-white: hsl(var(--nextui-foreground));
+    --background-lighten: rgba(112, 112, 112, 0.1);
+    --brand-green: theme('colors.primary.DEFAULT');
+    --brand-blue: theme('colors.secondary.DEFAULT');
+    --brand-cyan: theme('colors.huntressblue.DEFAULT');
+    --brand-black: theme('colors.background');
+    --brand-white: theme('colors.foreground');
     --success: hsl(var(--nextui-success));
     --warning: hsl(var(--nextui-warning));
     --danger: hsl(var(--nextui-danger));
@@ -56,7 +57,7 @@ li {
 }
 
 li::marker {
-  color: var(--brand-green);
+  color: theme('colors.primary.DEFAULT');
   /* font-size: 24px;
   line-height: 0.1; */
 }
@@ -81,4 +82,107 @@ input {
   background-color: #333436;
   padding: 4px 20px 8px;
   border-radius: 3px;
+}
+
+h1 {
+  letter-spacing: .45px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: Visuelt Webfont,sans-serif;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 60px
+}
+
+h2 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-family: Visuelt Webfont,sans-serif;
+  font-size: 39px;
+  font-weight: 700;
+  line-height: 49px
+}
+
+h3 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-family: Visuelt Webfont,sans-serif;
+  font-size: 31px;
+  font-weight: 700;
+  line-height: 35px
+}
+
+h4 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 35px
+}
+
+h5 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: Visuelt Webfont,sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 26px
+}
+
+h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: Visuelt Webfont,sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px
+}
+
+a:active,a:hover {
+  outline: 0
+}
+
+abbr[title] {
+  border-bottom: 1px dotted
+}
+
+b,strong {
+  font-weight: 700
+}
+
+dfn {
+  font-style: italic
+}
+
+/* h1 {
+  margin: .67em 0;
+  font-size: 2em
+} */
+
+mark {
+  color: #000;
+  background: #ff0
+}
+
+small {
+  font-size: 80%
+}
+
+sub,sup {
+  vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+  position: relative
+}
+
+sup {
+  top: -.5em
+}
+
+sub {
+  bottom: -.25em
+}
+
+img {
+  border: 0
 }
