--- a/src/components/navigation-menu/styles.css
+++ b/src/components/navigation-menu/styles.css
@@ -2,13 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+.navigation-bar {
+  padding: 20px 16px;
+
+}
+
 .navigation-menu {
   list-style-type: none;
   margin: 0;
-  padding: 0;
   overflow: hidden;
   display: flex;
-  z-index: 200;
   align-items: center;
   justify-items: center;
   gap: 2px;
@@ -49,12 +52,12 @@
 
 .dropdown-panel {
   display: none;
+  /* display: flex; */
   position: absolute;
   top: 0;
   border-top: 1px solid var(--brand-green);
   background-color: rgb(var(--background));
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 99;
   right: 0;
   top: 55px;
   /* margin-left: -400px; */
