Updates to nav menu

--- a/src/components/linkbutton/styles.module.css
+++ b/src/components/linkbutton/styles.module.css
@@ -2,6 +2,11 @@
   font-weight: 600;
 }
 
+.linkbutton img {
+  width: 6px;
+  height: 10px;
+}
+
 .linkbutton:hover {
   color: var(--brand-white);
 }
