--- a/src/components/navigation-menu/styles.css
+++ b/src/components/navigation-menu/styles.css
@@ -6,6 +6,14 @@
   padding: 20px 16px;
 }
 
+.navigation-bar-menu {
+  @apply flex justify-between items-center;
+}
+
+.navigation-bar-submenu {
+  @apply flex items-center gap-4 relative;
+}
+
 .navigation-menu {
   list-style-type: none;
   margin: 0;
@@ -107,4 +115,17 @@
   line-height: 1;
   font-weight: normal;
   min-height: 60px;
+}
+
+@media screen and (max-width: 767px) {
+  .navigation-bar-menu {
+    @apply flex-col;
+  }
+  .navigation-bar-submenu {
+    @apply flex-col;
+  }
+  .navigation-menu {
+    @apply flex-col;
+    height: inherit;
+  }
 }
